trying to solve a bug when using on iphone

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -39,6 +39,9 @@
   border-radius: 3rem;
 }
 
+@media only screen and (max-device-width: 480px) and (orientation: portrait) {
+  /* iPhone portrait */
+}
 @media screen and (max-device-width: 960px), screen and (max-width: 960px) {
   .about-container {
     flex-direction: column;
@@ -63,5 +66,40 @@
     width: 50%;
     margin: auto;
     margin-bottom: 25%;
+  }
+
+  .about-img > img {
+    width: 100%;
+  }
+}
+@media only screen and (max-device-width: 480px) and (orientation: landscape) {
+  /* iPhone landscape */
+  .about-container {
+    flex-direction: column;
+    padding: 0;
+    height: auto;
+  }
+  .about-desc {
+    width: 90%;
+    margin: 0 auto;
+    padding: 40px 20px 0px 20px;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .about-desc > h3 {
+    font-size: 1.8rem;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  .about-img {
+    width: 50%;
+    margin: auto;
+    margin-bottom: 25%;
+  }
+
+  .about-img > img {
+    width: 100%;
   }
 }
